# LibreCAD-Survey

librecad/src/main/: doc_plugin_interface.cpp  doc_plugin_interface.h
librecad/src/plugins/: document_interface.h
plugins/: CMakeLists.txt  plugins.pro
plugins/surveytools/: CMakeLists.txt  importcsvdialog.cpp  importcsvdialog.h  plugin.rc  pointmanager.cpp  pointmanager.h  surveytools.cpp  surveytools.h  surveytools.json  surveytools.pro
